Fix main content overlapping issue

--- a/style.css
+++ b/style.css
@@ -64,7 +64,6 @@ header {
 h2 {
   font-size: 4vw;
   color: #000000;
-  font-weight: lighter;
   padding: 0 0 1.5rem 0;
 }
 
@@ -385,7 +384,7 @@ footer {
   .header-img-content {
     margin: 0 auto;
     width: 85%;
-    height: 100%;
+    height: 30rem;
     padding-top: 2rem;
   }
 
@@ -410,7 +409,7 @@ footer {
   .about-me {
     display: block;
     box-shadow: none;
-    height: calc(85vw + 40vh);
+    height: calc(85vw + 55vh);
   }
 
   .about {
